<resources>
    <string name="app_name">BeginningPaintTest</string>
    <string name="about_text">This application provides a simple white canvas for you to draw on, along with the ability to use any color you desire and 5 different brush sizes. To create a custom color, press the \'Custom\' button and select the color index you would like to replace. A prompt will open asking for a hexidecimal value, enter the value of the color you wish to use and press \'ok\'. The color will now appear in the index you chose for it. Make sure that you don't leave the drawing area before your work is totally complete. Changing views will erase your picture, take a screenshot if you want to save it.</string>
    <string name="coloritem_2">2</string>
    <string name="coloritem_1">1</string>
    <string name="coloritem_3">3</string>
    <string name="coloritem_4">4</string>
    <string name="coloritem_5">5</string>
    <string name="coloritem_6">6</string>
    <string name="coloritem_7">7</string>
    <string name="coloritem_8">8</string>
    <string name="coloritem_9">9</string>
    <string name="coloritem_10">10</string>
    <string name="coloritem_11">11</string>
    <string name="coloritem_12">12</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
